--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
     </main>
     <footer>
-        <p class="p2">Bon appetit :)</p>
+        <p class="footer_text">Bon appetit :)</p>
     </footer>
 </body>
 </html>
