--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="src/style/style.css">
     <title>CSS Dinner Shopping List</title>
 </head>
 <body>
@@ -45,7 +45,7 @@
         </div>
     </main>
     <footer>
-        <p class="p2">Bon appetit :)</p>
+        <p class="footer_text">Bon appetit :)</p>
     </footer>
 </body>
 </html>
